--- a/index.html
+++ b/index.html
@@ -220,198 +220,7 @@
 
             </div>
         </section>
-        <!-- End About Section -->
 
-        <!-- ======= Steps Section ======= -->
-        <!-- <section id="steps" class="steps backgroundimg2">
-            <div class="container">
-                <div class="section-title" data-aos="fade-up">
-                    <h1 style="color: gold">Activities</h1>
-
-                </div>
-
-                <div class="row ">
-
-                    <div class="col-md-3">
-                        <img src="assets/img/Bungee%20Sunset%20SIlhouette%20Free%20Vector%20%5BConverted%5D-01.png" class="img-fluid" data-aos="fade-up">
-                        <div class="section-title">
-                            <h1 style="color: snow">Zipline</h1>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <img src="assets/img/Zipline-01.png" class="img-fluid" data-aos="fade-up">
-                        <div class="section-title">
-                            <h1 style="color: snow">Zipline</h1>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <img src="assets/img/free-zipline-vector-background-01.png" class="img-fluid" data-aos="fade-up">
-                        <div class="section-title">
-                            <h1 style="color: snow">Zipline</h1>
-                        </div>
-
-                    </div>
-                    <div class="col-md-3">
-                        <img src="assets/img/Rope%20Ladder%20Zipline%20Pine%20Free%20Vector.jpg" class="img-fluid" data-aos="fade-up">
-                        <div class="section-title">
-                            <h1 style="color: snow">Zipline</h1>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-        </section>
-        End Steps Section -->
-
-        <!-- ======= Features Section ======= 
-    <section id="features" class="features">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-4 mb-5 mb-lg-0" data-aos="fade-right">
-            <ul class="nav nav-tabs flex-column">
-              <li class="nav-item">
-                <a class="nav-link active show" data-toggle="tab" href="#tab-1">
-                  <h4>Modi sit est</h4>
-                  <p>Quis excepturi porro totam sint earum quo nulla perspiciatis eius.</p>
-                </a>
-              </li>
-              <li class="nav-item mt-2">
-                <a class="nav-link" data-toggle="tab" href="#tab-2">
-                  <h4>Unde praesentium sed</h4>
-                  <p>Voluptas vel esse repudiandae quo excepturi.</p>
-                </a>
-              </li>
-              <li class="nav-item mt-2">
-                <a class="nav-link" data-toggle="tab" href="#tab-3">
-                  <h4>Pariatur explicabo vel</h4>
-                  <p>Velit veniam ipsa sit nihil blanditiis mollitia natus.</p>
-                </a>
-              </li>
-              <li class="nav-item mt-2">
-                <a class="nav-link" data-toggle="tab" href="#tab-4">
-                  <h4>Nostrum qui quasi</h4>
-                  <p>Ratione hic sapiente nostrum doloremque illum nulla praesentium id</p>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-7 ml-auto" data-aos="fade-left" >
-            <div class="tab-content">
-              <div class="tab-pane active show" id="tab-1">
-                <figure>
-                  <img src="assets/img/features-1.png" alt="" class="img-fluid">
-                </figure>
-              </div>
-              <div class="tab-pane" id="tab-2">
-                <figure>
-                  <img src="assets/img/features-2.png" alt="" class="img-fluid">
-                </figure>
-              </div>
-              <div class="tab-pane" id="tab-3">
-                <figure>
-                  <img src="assets/img/features-3.png" alt="" class="img-fluid">
-                </figure>
-              </div>
-              <div class="tab-pane" id="tab-4">
-                <figure>
-                  <img src="assets/img/features-4.png" alt="" class="img-fluid">
-                </figure>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section>End Features Section -->
-
-        <!-- ======= Services Section ======= 
-        <section id="services" class="services backgroundimg3">
-            <div class="container">
-
-                <div class="section-title" data-aos="fade-up">
-                    <h1 style="color: gold">Pricing</h1>
-                    <br><br>
-                    <img src="assets/img/pricing.png" class="img-fluid">
-
-                </div>
-
-
-            </div>
-        </section>-->
-        <!--End Services Section -->
-
-        <!-- ======= Testimonials Section ======= 
-    <section id="testimonials" class="testimonials">
-      <div class="container">
-
-        <div class="section-title" data-aos="fade-up">
-          <h2>Testimonials</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="owl-carousel testimonials-carousel" data-aos="fade-up">
-
-          <div class="testimonial-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-            <h3>Saul Goodman</h3>
-            <h4>Ceo &amp; Founder</h4>
-          </div>
-
-          <div class="testimonial-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-            <h3>Sara Wilsson</h3>
-            <h4>Designer</h4>
-          </div>
-
-          <div class="testimonial-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-            <h3>Jena Karlis</h3>
-            <h4>Store Owner</h4>
-          </div>
-
-          <div class="testimonial-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-            <h3>Matt Brandon</h3>
-            <h4>Freelancer</h4>
-          </div>
-
-          <div class="testimonial-item">
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-            <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-            <h3>John Larson</h3>
-            <h4>Entrepreneur</h4>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Testimonials Section -->
 
         <!-- ======= Portfolio Section ======= -->
         <section id="portfolio" class="portfolio section-bg">
@@ -513,7 +322,7 @@
                                 </div>
                                 <div class="social">
 
-                                    <a href=""><i class="icofont-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/rishav-nanda-719144179"><i class="icofont-linkedin"></i></a>
                                 </div>
                             </div>
                         </div>
