--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                 </div>
                                 <div class="social">
 
-                                    <a href=""><i class="icofont-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/subhankar-das-919383195"><i class="icofont-linkedin"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -338,7 +338,7 @@
                                 </div>
                                 <div class="social">
 
-                                    <a href=""><i class="icofont-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/adya-rath-165b971a0/"><i class="icofont-linkedin"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -349,12 +349,12 @@
                             <img src="assets/img/team/4.png" class="img-fluid" alt="">
                             <div class="member-info">
                                 <div class="member-info-content">
-                                    <h4>Rakesh</h4>
+                                    <h4>Rakesh Mahapatra</h4>
 
                                 </div>
                                 <div class="social">
 
-                                    <a href=""><i class="icofont-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/rakesh-mahapatra-396085208"><i class="icofont-linkedin"></i></a>
                                 </div>
                             </div>
                         </div>
