--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div id="check" class="container text-center text-md-left" data-aos="fade-up">
             <!-- <h1>Welcome to Maxim</h1>-->
             <img src="assets/img/GoHiking%20Logo.png" width="200px" height="200px" class="img-fluid">
-            <h1 style="font-style: italic;">"Kill nothing but time and keep nothing but memories"</h1>
+            <h1 style="font-style: italic;">"For a Better Future"</h1>
             <br><br>
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
         </div>
